--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
   "dependencies": {
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
-  }
+    "express": "^4.21.2",
+    "mongodb": "^6.13.0"
+  },
+  "name": "s68_edusound",
+  "version": "1.0.0",
+  "description": "EduSound\r Title of Project:",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {}
 }
