--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 port = 3000
-db_URL=mongodb+srv://divyasingh5028:lucygreat@asap.6ch51.mongodb.net/?retryWrites=true&w=majority&appName=ASAP
+db_URL=mongodb+srv://divyasingh5028:<lucygreat>@asap.6ch51.mongodb.net/?retryWrites=true&w=majority&appName=ASAP
