--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "dependencies": {
-    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongodb": "^6.13.0",
-    "mongoose": "^8.10.0"
+    "mongodb": "^6.13.0"
   },
   "name": "s68_edusound",
   "version": "1.0.0",
@@ -16,5 +14,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {}
 }
